--- a/templates/temporada_detail.html
+++ b/templates/temporada_detail.html
@@ -212,7 +212,7 @@
             </div>
 
             {% if capitulo.cover_capitulo %}
-        <img src="{{ capitulo.cover_capitulo.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="https://image.tmdb.org/t/p/w227_and_h127_bestv2/{{ capitulo.cover_capitulo }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -248,7 +248,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
                 </ul>
             </div>
         {% if capitulo.cover_capitulo %}
-        <img src="{{ capitulo.cover_capitulo.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="https://image.tmdb.org/t/p/w227_and_h127_bestv2/{{ capitulo.cover_capitulo }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -282,7 +282,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
                 </ul>
             </div>
         {% if capitulo.cover_capitulo %}
-        <img src="{{ capitulo.cover_capitulo.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="https://image.tmdb.org/t/p/w227_and_h127_bestv2/{{ capitulo.cover_capitulo }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -315,7 +315,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
                 </ul>
             </div>
         {% if capitulo.cover_capitulo %}
-        <img src="{{ capitulo.cover_capitulo.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="https://image.tmdb.org/t/p/w227_and_h127_bestv2/{{ capitulo.cover_capitulo }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -347,7 +347,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
                 </ul>
             </div>
         {% if capitulo.cover_capitulo %}
-        <img src="{{ capitulo.cover_capitulo.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="https://image.tmdb.org/t/p/w227_and_h127_bestv2/{{ capitulo.cover_capitulo }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -378,7 +378,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 
                 </ul>
             </div>
-        <img src="{{ capitulo.cover_capitulo.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px) blur(1px);
+        <img src="https://image.tmdb.org/t/p/w227_and_h127_bestv2/{{ capitulo.cover_capitulo }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px) blur(1px);
 filter: brightness(50%) blur(2px) blur(1px);" class="imgplay">
         <input type="hidden" name="server" value="streamcloud">
         <span class="duraciondata">Duración: {{ capitulo.run_time }}min</span>
@@ -403,7 +403,7 @@ filter: brightness(50%) blur(2px) blur(1px);" class="imgplay">
                 </ul>
             </div>
         {% if capitulo.cover_capitulo %}
-        <img src="{{ capitulo.cover_capitulo.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="https://image.tmdb.org/t/p/w227_and_h127_bestv2/{{ capitulo.cover_capitulo }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -434,7 +434,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
                 </ul>
             </div>
         {% if capitulo.cover_capitulo %}
-        <img src="{{ capitulo.cover_capitulo.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="https://image.tmdb.org/t/p/w227_and_h127_bestv2/{{ capitulo.cover_capitulo }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -466,7 +466,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
                 </ul>
             </div>
         {% if capitulo.cover_capitulo %}
-        <img src="{{ capitulo.cover_capitulo.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="https://image.tmdb.org/t/p/w227_and_h127_bestv2/{{ capitulo.cover_capitulo }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -498,7 +498,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
                 </ul>
             </div>
         {% if capitulo.cover_capitulo %}
-        <img src="{{ capitulo.cover_capitulo.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="https://image.tmdb.org/t/p/w227_and_h127_bestv2/{{ capitulo.cover_capitulo }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -1323,7 +1323,7 @@ document.getElementById('panelstreamcloud').style.display="none"
                 <a target="_blank" href="https://plus.google.com/share?url=https://wmoviestest.herokuapp.com/{{capitulo.slug}}/{{temporada.slug}}/" type="button" style="background-color: #d34836;" class="btn-floating btn-gplus"><i class="fa fa-google-plus"></i></a>
 
                 <!--Pinterest-->
-                <a target="_blank" href="https://pinterest.com/pin/create/button/?url=https://wmoviestest.herokuapp.com/{{capitulo.slug}}/{{temporada.slug}}/&media={{capitulo.cover_capitulo.url}}&description=Ver {{capitulo.nombre}} completa HD en Waomovies" type="button"  style="background-color: #c8232c ;"class="btn-floating btn-pin"><i class="fa fa-pinterest"></i></a>
+                <a target="_blank" href="https://pinterest.com/pin/create/button/?url=https://wmoviestest.herokuapp.com/{{capitulo.slug}}/{{temporada.slug}}/&media=https://image.tmdb.org/t/p/w227_and_h127_bestv2/{{capitulo.cover_capitulo}}&description=Ver {{capitulo.nombre}} completa HD en Waomovies" type="button"  style="background-color: #c8232c ;"class="btn-floating btn-pin"><i class="fa fa-pinterest"></i></a>
     
                 <!--Comments-->
                 <!--a type="button" class="btn-floating btn-comm"><i class="fa fa-comments"></i></a>
@@ -2108,7 +2108,7 @@ input[type="button"].btn-block {
                                 <div class="wrapper">
                                     <figure class="img-polaroid figure_video">
                                         <a class="various iframe fancybox2 lightbox-video" href="/{{kk.slug}}/{{temporada.slug}}/">
-                                            <img src="{{kk.cover_capitulo.url}}" alt="" />
+                                            <img src="https://image.tmdb.org/t/p/w227_and_h127_bestv2/{{kk.cover_capitulo}}" alt="" />
                                             <span class="video_icon"></span>
                                             <!--span class="video_title">14:24 </span-->
                                         </a>
@@ -2152,7 +2152,7 @@ input[type="button"].btn-block {
                                                                 {% else %}
                                                                 <div  class="swiper-slide">
                                                                 {% endif %}
-                                        <div class="movie-image" data-bg-image="{{kk.cover_capitulo.url}}">
+                                        <div class="movie-image" data-bg-ihttps://image.tmdb.org/t/p/w227_and_h127_bestv2/mage="{{kk.cover_capitulo}}">
                                             <div class="entry-hover">
                                                 <div class="entry-actions">
                                                     <a href="/{{kk.slug}}/{{temporada.slug}}/" class="btn fill">Ver</a>
